Fix reset button on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ a {
         padding-right: 0px;
         padding-left: 0px;
     }
+    .button {
+        width: 200px;
+    }
+
 }
 button {
     display: block;
